--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,10 +1,10 @@
-.container {
+.home-container {
   height: 100vh;
   display: flex;
   align-items: stretch;
 }
 
-.container aside {
+.home-container aside {
   flex: 4;
   display: flex;
   flex-direction: column;
@@ -12,11 +12,11 @@
   padding: 120px 80px;
 }
 
-.container aside img {
+.home-container aside img {
   max-width: 320px;
 }
 
-.container aside h2 {
+.home-container aside h2 {
   color: #fff;
   font-family: 'Poppins', sans-serif;
   font-size: 36px;
@@ -25,14 +25,14 @@
   margin-top: 16px;
 }
 
-.container aside p {
+.home-container aside p {
   font-size: 24px;
   line-height: 32px;
   margin-top: 16px;
   color: #f8f8f8;
 }
 
-.container main {
+.home-container main {
   flex: 6;
   padding: 0 32px;
   display: flex;
@@ -44,14 +44,14 @@ aside {
   padding-left: 80px;
 }
 
-.main-content {
+.home-container .main-content {
   display: flex;
   flex-direction: column;
   align-items: stretch;
   width: 100%;
   max-width: 320px;
 }
-.main-content form {
+.home-container .main-content form {
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -91,7 +91,7 @@ aside {
   cursor: not-allowed;
 }
 
-.main-content p {
+.home-container .main-content p {
   display: flex;
   align-items: center;
   color: #a8a8b3;
@@ -99,7 +99,7 @@ aside {
   margin-bottom: 32px;
 }
 
-.main-content p:before {
+.home-container .main-content p:before {
   content: '';
   flex-grow: 1;
   height: 1px;
@@ -107,7 +107,7 @@ aside {
   margin-right: 16px;
 }
 
-.main-content p:after {
+.home-container .main-content p:after {
   content: '';
   flex-grow: 1;
   height: 1px;
