--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -2,62 +2,104 @@
   height: 100vh;
   display: flex;
   align-items: stretch;
+  background-color: var(--background-color);
+
+  aside {
+    flex: 4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 120px 80px;
+
+    img {
+      max-width: 320px;
+    }
+
+    h2 {
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      font-size: 36px;
+      font-weight: 700;
+      line-height: 42px;
+      margin-top: 16px;
+    }
+
+    p {
+      font-size: 24px;
+      line-height: 32px;
+      margin-top: 16px;
+      color: #f8f8f8;
+    }
+  }
+
+  main {
+    flex: 6;
+    padding: 0 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    width: 100%;
+    max-width: 320px;
+
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      width: 100%;
+      max-width: 320px;
+    }
+
+    p {
+      display: flex;
+      align-items: center;
+      color: #a8a8b3;
+      text-align: center;
+      margin-bottom: 32px;
+
+      &:before {
+        content: '';
+        flex-grow: 1;
+        height: 1px;
+        background: #a8a8b3;
+        margin-right: 16px;
+      }
+
+      &:after {
+        content: '';
+        flex-grow: 1;
+        height: 1px;
+        background: #a8a8b3;
+        margin-left: 16px;
+      }
+    }
+
+    form {
+      input {
+        width: 100%;
+        height: 50px;
+        border-radius: 8px;
+        padding: 0 16px;
+        background: var(--secondary-color);
+        color: var(--main-text-color);
+        caret-color: var(--main-text-color);
+        border: 1px solid #a8a8b3;
+        outline: none;
+        margin-bottom: 16px;
+      }
+    }
+  }
 }
 
-.home-container aside {
-  flex: 4;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 120px 80px;
-}
+// aside {
+//   padding-left: 80px;
+// }
 
-.home-container aside img {
-  max-width: 320px;
-}
-
-.home-container aside h2 {
-  color: #fff;
-  font-family: 'Poppins', sans-serif;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 42px;
-  margin-top: 16px;
-}
-
-.home-container aside p {
-  font-size: 24px;
-  line-height: 32px;
-  margin-top: 16px;
-  color: #f8f8f8;
-}
-
-.home-container main {
-  flex: 6;
-  padding: 0 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-aside {
-  padding-left: 80px;
-}
-
-.home-container .main-content {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  width: 100%;
-  max-width: 320px;
-}
-.home-container .main-content form {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  width: 100%;
-  max-width: 320px;
-}
 #home-logo {
   align-self: center;
   margin-bottom: 80px;
@@ -75,53 +117,18 @@ aside {
   color: #fff;
   margin-bottom: 32px;
   transition: filter 0.2s;
-}
 
-#google-button img {
-  align-self: center;
-  margin-right: 8px;
-}
+  img {
+    align-self: center;
+    margin-right: 8px;
+  }
 
-#google-button:not(:disabled):hover {
-  filter: brightness(0.9);
-}
+  &:not(:disabled):hover {
+    filter: brightness(0.9);
+  }
 
-#google-button:disabled {
-  opacity: 0.6;
-  cursor: not-allowed;
-}
-
-.home-container .main-content p {
-  display: flex;
-  align-items: center;
-  color: #a8a8b3;
-  text-align: center;
-  margin-bottom: 32px;
-}
-
-.home-container .main-content p:before {
-  content: '';
-  flex-grow: 1;
-  height: 1px;
-  background: #a8a8b3;
-  margin-right: 16px;
-}
-
-.home-container .main-content p:after {
-  content: '';
-  flex-grow: 1;
-  height: 1px;
-  background: #a8a8b3;
-  margin-left: 16px;
-}
-
-form input {
-  width: 100%;
-  height: 50px;
-  border-radius: 8px;
-  padding: 0 16px;
-  background: #fff;
-  border: 1px solid #a8a8b3;
-  outline: none;
-  margin-bottom: 16px;
+  &:disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+  }
 }
