--- a/src/components/DeleteModal/styles.scss
+++ b/src/components/DeleteModal/styles.scss
@@ -4,7 +4,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  // background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--modal-background);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,7 +13,7 @@
   .modal-content {
     height: 362px;
     width: 590px;
-    background-color: #fff;
+    background-color: var(--background-color);
     border-radius: 8px;
     border: 0;
     display: flex;
@@ -29,7 +30,7 @@
     h2 {
       font-weight: 700;
       font-size: 24px;
-      color: #29292e;
+      color: var(--main-text-color);
       margin-bottom: 12px;
     }
 
