--- a/src/pages/NewRoom/styles.scss
+++ b/src/pages/NewRoom/styles.scss
@@ -2,98 +2,97 @@
   height: 100vh;
   display: flex;
   align-items: stretch;
-}
+  background-color: var(--background-color);
 
-.new-room-container aside {
-  flex: 4;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 120px 80px;
-}
+  aside {
+    flex: 4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 120px 80px;
 
-.new-room-container aside img {
-  max-width: 320px;
-}
+    img {
+      max-width: 320px;
+    }
 
-.new-room-container aside h2 {
-  color: #fff;
-  font-family: 'Poppins', sans-serif;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 42px;
-  margin-top: 16px;
-}
+    h2 {
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      font-size: 36px;
+      font-weight: 700;
+      line-height: 42px;
+      margin-top: 16px;
+    }
 
-.new-room-container aside p {
-  font-size: 24px;
-  line-height: 32px;
-  margin-top: 16px;
-  color: #f8f8f8;
-}
+    p {
+      font-size: 24px;
+      line-height: 32px;
+      margin-top: 16px;
+      color: #f8f8f8;
+    }
+  }
 
-.new-room-container main {
-  flex: 6;
-  padding: 0 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  main {
+    flex: 6;
+    padding: 0 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-.new-room-container aside {
-  padding-left: 80px;
-}
+    .content {
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      width: 100%;
+      max-width: 320px;
 
-.new-room-main-content {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  width: 100%;
-  max-width: 320px;
-}
+      h1,
+      h2 {
+        text-align: center;
+        font-family: 'Poppins', sans-serif;
+        font-size: 24px;
+        font-weight: bold;
+        color: var(--main-text-color);
+        margin-bottom: 24px;
+      }
 
-.new-room-main-content form {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  width: 100%;
-  max-width: 320px;
-}
+      form {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        width: 100%;
+        max-width: 320px;
 
-.new-room-main-content h1,
-h2 {
-  text-align: center;
-  font-family: 'Poppins', sans-serif;
-  font-size: 24px;
-  font-weight: bold;
-  color: #29292e;
-  margin-bottom: 24px;
-}
+        input {
+          width: 100%;
+          height: 50px;
+          border-radius: 8px;
+          padding: 0 16px;
+          background: var(--secondary-color);
+          color: var(--main-text-color);
+          caret-color: var(--main-text-color);
+          border: 1px solid #a8a8b3;
+          outline: none;
+          margin-bottom: 16px;
+        }
+      }
 
-#new-room-home-logo {
-  align-self: center;
-  margin-bottom: 56px;
-}
+      #new-room-home-logo {
+        align-self: center;
+        margin-bottom: 56px;
+      }
 
-.new-room-main-content p {
-  font-size: 14px;
-  color: #737380;
-  text-align: center;
-  margin-top: 16px;
-  margin-bottom: 32px;
-}
+      p {
+        font-size: 14px;
+        color: #737380;
+        text-align: center;
+        margin-top: 16px;
+        margin-bottom: 32px;
 
-.new-room-main-content p a {
-  color: #e55ef9;
-}
-
-.new-room-container form input {
-  width: 100%;
-  height: 50px;
-  border-radius: 8px;
-  padding: 0 16px;
-  background: #fff;
-  border: 1px solid #a8a8b3;
-  outline: none;
-  margin-bottom: 16px;
+        a {
+          color: #e55ef9;
+        }
+      }
+    }
+  }
 }
