--- a/src/components/NoQuestionsBox/styles.scss
+++ b/src/components/NoQuestionsBox/styles.scss
@@ -14,7 +14,7 @@
   p {
     font-size: 18px;
     font-weight: 600;
-    color: #29292e;
+    color: var(--main-text-color);
     margin-bottom: 8px;
   }
 
@@ -22,6 +22,6 @@
     text-align: center;
     font-size: 14px;
     font-weight: 500px;
-    color: #737380;
+    color: var(--main-text-color);
   }
 }
