--- a/src/pages/Room/styles.scss
+++ b/src/pages/Room/styles.scss
@@ -117,7 +117,7 @@
           color: #737380;
           font-weight: 500;
 
-          button {
+          .link {
             background-color: transparent;
             border: 0;
             color: #835afd;
