--- a/src/pages/NewRoom/styles.scss
+++ b/src/pages/NewRoom/styles.scss
@@ -96,3 +96,11 @@
     }
   }
 }
+
+@media screen and (max-width: 480px) {
+  .new-room-container {
+    aside {
+      display: none;
+    }
+  }
+}
