--- a/src/pages/Room/styles.scss
+++ b/src/pages/Room/styles.scss
@@ -2,7 +2,7 @@
   background-color: var(--background-color);
   min-height: 100vh;
 
-  header {
+  .desktop-header {
     padding: 24px;
     border-bottom: 1px solid var(--header-bottom-border);
 
@@ -130,4 +130,15 @@
       }
     }
   }
+}
+
+@keyframes fadeIn {
+  from {
+    transform: translateX(308px);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+@media screen and (max-width: 480px) {
 }
