final responsivity tweaks and readme file

--- a/src/components/NoQuestionsBox/styles.scss
+++ b/src/components/NoQuestionsBox/styles.scss
@@ -1,5 +1,5 @@
 .no-questions-container {
-  margin: 0 auto;
+  margin: 138px auto 0 auto;
   width: 285px;
   display: flex;
   flex-direction: column;
