--- a/src/components/DeleteModal/styles.scss
+++ b/src/components/DeleteModal/styles.scss
@@ -68,3 +68,11 @@
     }
   }
 }
+
+@media screen and (max-width: 767px) {
+  .modal-container {
+    .modal-content {
+      width: 300px;
+    }
+  }
+}
