--- a/src/components/MobileHeader/styles.scss
+++ b/src/components/MobileHeader/styles.scss
@@ -1,5 +1,6 @@
 .mobile-header {
   padding: 24px;
+  border-bottom: 1px solid var(--header-bottom-border);
 
   nav {
     display: flex;
@@ -39,26 +40,6 @@
 
       nav {
         padding: 24px;
-      }
-
-      .options-container {
-        div {
-          display: flex;
-          align-items: center;
-          height: 45px;
-          width: 100%;
-          background-color: var(--background-color);
-          color: var(--main-text-color);
-          padding: 0 24px;
-        }
-
-        & > * {
-          border-top: 1px solid #e2e2e2;
-        }
-
-        :last-child {
-          border-bottom: 1px solid #e2e2e2;
-        }
       }
     }
   }
